[gd_scene load_steps=4 format=2]

[ext_resource path="res://source/interface/editor/MapEditorUI.tscn" type="PackedScene" id=1]
[ext_resource path="res://source/camera/GameCam.tscn" type="PackedScene" id=2]
[ext_resource path="res://source/editor/MapEditor.gd" type="Script" id=4]

[node name="MapEditor" type="Node2D"]
script = ExtResource( 4 )

[node name="MapEditorUI" parent="." instance=ExtResource( 1 )]

[node name="Camera2D" parent="." instance=ExtResource( 2 )]
[connection signal="brush_size_selected" from="MapEditorUI" to="." method="_on_MapEditorUI_brush_size_selected"]
[connection signal="mode_changed" from="MapEditorUI" to="." method="_on_MapEditorUI_mode_changed"]
[connection signal="new_map_pressed" from="MapEditorUI" to="." method="_on_MapEditorUI_new_map_pressed"]
[connection signal="player_selected" from="MapEditorUI" to="." method="_on_MapEditorUI_player_selected"]
[connection signal="save_pressed" from="MapEditorUI" to="." method="_on_MapEditorUI_save_pressed"]
[connection signal="terrain_selected" from="MapEditorUI" to="." method="_on_MapEditorUI_terrain_selected"]
